API fixed, builders done, database module done, connection module started

--- a/report/tex/implementation/API.tex
+++ b/report/tex/implementation/API.tex
@@ -16,7 +16,7 @@ As can be seen, the read list call for the \lstinline|profile| data type, like a
 \subsubsection{Details}
 If the call is for a detailed view, the caller has to provide an array of ids for which details are needed. 
 
-As an example of what the details calls look like, the call for the data type \lstinline|profile| is shown in \autoref{read_profile_details}
+As an example of what the details calls look like, the call for the data type \lstinline|profile| is shown in \autoref{lst:read_profile_details}
 
 \lstinputlisting[label=lst:read_profile_details, caption=Read Profile Details, language=c++]{lst/read_profile_details.cpp}
 
