--- a/report/tex/implementation/architecture_overview.tex
+++ b/report/tex/implementation/architecture_overview.tex
@@ -1,4 +1,4 @@
-\section{Architectural overview}
+\section{Overview}
 The API and the server is comprised of several modules with various responsibilities, all running on the central server. They are listed and described here:
 
 \begin{itemize}
