label on impl chapter, working on conn mod

--- a/report/tex/implementation/chapter.tex
+++ b/report/tex/implementation/chapter.tex
@@ -1,4 +1,5 @@
 \chapter{Implementation}
+\label{cha:implementation}
 \input{tex/implementation/introduction}
 
 %\input{tex/implementation/filename}
