--- a/report/tex/implementation/connection_module.tex
+++ b/report/tex/implementation/connection_module.tex
@@ -1,1 +1,2 @@
 \section{Connection Module}
+The connection module is implemented with two structs: \lstinline|ServerInfo| and \lstinline|ClientInfo|, which handle information about the server and client and are used for thread parameters, and two public functions \lstinline|run_server| and \lstinline|stop_server| which handle starting and stopping the server.
