--- a/report/tex/design/modules.tex
+++ b/report/tex/design/modules.tex
@@ -49,7 +49,7 @@ The \ac{api} module will take care of handling each request made to the server. 
 
 The private interface will be much more involved however. There will be a function for each action and each data type described in the \ac{api} documentation (see Appendix \autoref{app:api}).
 This creates quite a few functions, as can be seen in \autoref{fig:call_list}. Added to this will be functions to validate the structure of each type of request, as well as formatting the response and processing bulk data.
-For a comprehensive overview of these helper functions, see \autoref{cha:implementation}
+For a comprehensive overview of these helper functions, see \autoref{cha:implementation}.
 
 \begin{figure}[ht]
 \begin{tabular}[ht]{c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
