Started section on database module

--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -121,6 +121,7 @@
 \def\chapterautorefname{Chapter}
 \def\sectionautorefname{Section}
 \def\subsectionautorefname{Subsection}
+\def\appendixautorefname{Appendix}
 
 %Ingen indentering
 \setlength{\parindent}{0mm}
