test done, manual done, bib updated

--- a/report/bib/bibliography.bib
+++ b/report/bib/bibliography.bib
@@ -25,5 +25,49 @@ note = {}
 crud13,
 author = {Wikipedia},
 title = {CRUD},
-year = {2013}
+year = {2013},
+url = {http://en.wikipedia.org/wiki/CRUD}
 }
+
+@misc{
+install,
+author = {SW603F13},
+title = {Installation Guide},
+year = {2013},
+url = {https://github.com/Ezphares/giraf_database/blob/master/README.md}
+}
+
+@misc{
+mysqlconnector,
+author = {MySQL},
+title = {Download Connector/C},
+year = {2013},
+url = {http://dev.mysql.com/downloads/connector/c/}
+}
+
+@misc{
+jsoncppinstall,
+author = {StackOverflow},
+title = {Building JsonCPP (Linux) - and instruction for us mere mortals},
+year = {2011},
+url = {http://stackoverflow.com/questions/4628922/building-jsoncpp-linux-an-instruction-for-us-mere-mortals}
+}
+
+@misc{
+boostinstall,
+author = {Boost Community},
+title = {Boost},
+year = {2013},
+url = {http://www.boost.org/}
+}
+
+@misc{
+GNUlicense,
+author = {Free Software Foundation},
+title = {GNU General Public License},
+year = {2007},
+url = {https://github.com/Zucka/girafAdmin/blob/master/LICENSE.md}
+}
+
+
+
