--- a/report/tex/manual/introduction.tex
+++ b/report/tex/manual/introduction.tex
@@ -1,1 +1,1 @@
-\emph{(Chapter introduction goes here)} 
+\emph{In this chapter, the instructions for installation of the current version of the project is explained.}
