--- a/report/master.tex
+++ b/report/master.tex
@@ -37,11 +37,13 @@
 \cleardoublepage
 \begin{appendices}
 \chapter{API Documentation}\label{app:api}
-\includepdf[pages={1}]{img/appendix_api}
-\includepdf[pages={2}]{img/appendix_api}
-\includepdf[pages={3}]{img/appendix_api}
-\includepdf[pages={4}]{img/appendix_api}
-\includepdf[pages={5}]{img/appendix_api}
+  \includepdf[pages={1}]{img/appendix_api}
+  \includepdf[pages={2}]{img/appendix_api}
+  \includepdf[pages={3}]{img/appendix_api}
+  \includepdf[pages={4}]{img/appendix_api}
+  \includepdf[pages={5}]{img/appendix_api}
+\chapter{Unit Test Example}\label{app:unit_test}
+  \lstinputlisting[language=c++]{lst/unit_test_example.cpp}
 \end{appendices}
 \cleardoublepage
 \pdfbookmark{Bibliography}{bib}
