--- a/report/tex/implementation/chapter.tex
+++ b/report/tex/implementation/chapter.tex
@@ -7,3 +7,4 @@
 \input{tex/implementation/connection_module}
 \input{tex/implementation/builder_functions}
 \input{tex/implementation/API}
+\input{tex/implementation/synchronization}
