--- a/report/tex/introduction/chapter.tex
+++ b/report/tex/introduction/chapter.tex
@@ -3,4 +3,6 @@
 
 \input{tex/introduction/workflow}
 
-\input{tex/introduction/problem_statement}
+%\input{tex/introduction/giraf_architechture}
+
+%\input{tex/introduction/problem_statement}
