--- a/report/tex/sprint_reflections/sprints.tex
+++ b/report/tex/sprint_reflections/sprints.tex
@@ -24,3 +24,19 @@ Goals for this sprint include creating a JSON encoder and decoder, creating a Oa
 During this sprint JSON encoder/decoder, OasisLib dummy and database build script were finished. The API-calls, however, were delayed to sprint 4.
 
 \section{Sprint 4 (Week 17 \& 18)}
+The goal for this sprint was to finish the API-calls in order to complete the work on the central database. And to set up synchronization with the Admin group.
+
+Most of the API-calls were not completed in the previous sprint. Apart from some of the read-calls, all the calls still needed to be implemented and tested. 
+
+We managed to implement and unit test all of the calls. There were some complications with the Admin group, they crashed the server due to a bug in the server. This was postponed to sprint 5.  
+
+\section{Sprint 5 (Week 19)}
+This sprint was intended for debug. We performed some minor tweaking on the API and got the server running after the crash mentioned in sprint 4.
+
+\section{Sprint 6 (Week 20, 21 \& 22)}
+The goal for final sprint of the semester was to complete the documentation of the work we had done in the form of a report.
+
+Some of the documentation was noted down as we went along but most of the report was still not written. 
+
+In this sprint we managed to complete the documentation and proofread the report.
+
