--- a/report/tex/sprint_reflections/chapter.tex
+++ b/report/tex/sprint_reflections/chapter.tex
@@ -1,4 +1,11 @@
-\chapter{Sprints \& Reflections}
+\chapter{Process \& Progress}
+%\chapter{Sprints \& Reflections}
 \input{tex/sprint_reflections/introduction}
 
+\input{tex/sprint_reflections/problem_statement}
+
+\input{tex/sprint_reflections/approach}
+
 \input{tex/sprint_reflections/sprints}
+
+\input{tex/sprint_reflections/product_backlog}
