--- a/report/tex/introduction/chapter.tex
+++ b/report/tex/introduction/chapter.tex
@@ -1,8 +1,8 @@
-\chapter{Introduction}
+\chapter{Introduction to Wasteland}
 \input{tex/introduction/introduction}
 
 \input{tex/introduction/workflow}
 
-%\input{tex/introduction/giraf_architechture}
+\input{tex/introduction/giraf_architechture}
 
 %\input{tex/introduction/problem_statement}
