--- a/report/tex/acronyms.tex
+++ b/report/tex/acronyms.tex
@@ -2,3 +2,11 @@
 \acrodef{api}[API]{Application Programming Interface}
 \acrodef{json}[JSON]{JavaScript Object Notation}
 \acrodef{xml}[XML]{Extensible Markup Language}
+\acrodef{api}[API]{Application Programming Interface}
+\acrodef{cat}[CAT]{Category Administration Tool}
+\acrodef{lamp}[LAMP]{Linux, Apache2, MySql and PHP}
+\acrodef{giraf}[GIRAF]{Graphical Interface Resources for Autistic Folk}
+\acrodef{oha}[OHA]{Open Handset Alliance}
+\acrodef{gui}[GUI]{Graphical User Interface}
+\acrodef{json}[JSON]{JavaScript Object Notation}
+\acrodef{foss}[FOSS]{Free and Open-Source Software}
