--- a/report/master.tex
+++ b/report/master.tex
@@ -48,6 +48,6 @@
 \cleardoublepage
 \pdfbookmark{Bibliography}{bib}
 \bibliographystyle{plain}
-\bibliography{bib/bibliography}
+\bibliography{bib/bibliography,tex/commonReport/bib/commonReport}
 
 \end{document}
