--- a/report/bib/bibliography.bib
+++ b/report/bib/bibliography.bib
@@ -1,5 +1,3 @@
-
-
 % se evt. nedstående eksempler for kileangivning
 
 @Book{
@@ -69,5 +67,12 @@ year = {2007},
 url = {https://github.com/Zucka/girafAdmin/blob/master/LICENSE.md}
 }
 
-
+@Book{
+req_wrong,
+title = {Agile and iterative development: a manager's guide},
+publisher = {Pearson Education, Inc.},
+author = {Craig Larman},
+year = {2004},
+isbn = {0-13-111155-8}
+}
 
