reflections done, common chapter will be updated asap by Mark, woo

--- a/report/tex/commonReport/commonReport.tex
+++ b/report/tex/commonReport/commonReport.tex
@@ -40,7 +40,7 @@
 
 \input{tex/commonReport/pictogram}
 
-\input{tex/commonReport/morgana}
+%\input{tex/commonReport/morgana}
 
 \input{tex/commonReport/designGuidelines}
 
