--- a/report/tex/reflection/project_evaluation.tex
+++ b/report/tex/reflection/project_evaluation.tex
@@ -1,1 +1,21 @@
 \section{Project Evaluation}
+We had a really good supervisor, which helped us keep the project on track.
+The primary goal of the project was initially synchronization between two databases, a local tablet-database and a central server, but this was severely inhibited by the fact that the central database was virtually non-existent. This meant that we had to spend time implementing a server and a communication \ac{api} before the expected project, i.e. the synchronization could be started. This led to a very basic synchronization functionality, more a proof of concept than anything else.
+
+The workflow was very influenced by the fact that this was a multiproject, which meant that the sprints were global. This sometimes clashed with the desired workflow of our project. 
+
+The multiproject communication was quite good, with meetings every week and good communication between the different subprojects relying on each other. It would have been good to have the common vision ready as early as possible. 
+
+The common development method was SCRUM, which for the multiproject worked. The sprints were generally of adequate length, considering the time frame of the multiproject, however a few sprints were too short. 
+
+The committees worked very well, especially at the beginning, in unifying the overall design, stories etc.
+
+\subsection{Recommendations for next year}
+\begin{itemize}
+\item Make sure the basis for each project proposal is done, i.e. ensure that the Launcher, the databases and everything is finished before building on top of them. 
+\item Make sure everyone knows what is implemented.
+\item Have a common vision early on. Ensure that everyone knows exactly what it is.
+\item Committees are a great way to let all groups in on important decisions without involving every single person.
+\item Communicate. Have weekly meetings, visit each other's group rooms, send e-mails.
+\item Socialize.
+\end{itemize}
