--- a/report/tex/test/unit_test.tex
+++ b/report/tex/test/unit_test.tex
@@ -1,7 +1,7 @@
 \section{Unit Tests}
 Unit tests have been written for all modules of the server using the BOOST Unit Test framework. 
 
-The unit tests for the modules test that everything gets initialized properly, and that the functionality handles both expected and unexpected input adequately, thus a test that should fail and one that should pass is written for each functionality included in the final product. An example of a BOOST unit test for the connection module can be found in \autoref{app:unit_test}.
+The unit tests for the modules test that everything gets initialized properly, and that the functionality handles both expected and unexpected input adequately, thus a test that should fail and one that should pass is written for each functionality included in the final product. An example of a BOOST unit test for the connection module can be found in Appendix \autoref{app:unit_test}.
 
 Furthermore the unit tests, specifically those of the API module, have been the basis of the integration tests of the API design. All the functionality is tested via unit tests to ensure that they conform to the design.
 
