--- a/report/tex/implementation/synchronization.tex
+++ b/report/tex/implementation/synchronization.tex
@@ -1,6 +1,9 @@
 \section{Synchronization}
 The synchronization between the central database and a local database on an Android device is handled by the Puddle application. This application runs on the Android device, and is programmed in Java.
 
+\subsection{Main Activity}
+The main activity in Android is the activity that is started when the application is launched. The main activity in Puddle includes the user interface for the application as well as a reference to the database in PuddleApplication.
+
 \subsection{Connection}
 The connection from Puddle to the central database is handled by MySQL Connector/J. Connector/J will given an IP address, user name and password connect to a remote MySQL database. From there it is possible to send SQL queries to manipulate the MySQL database.
 
@@ -12,7 +15,11 @@ onCreate functions in Android run when the class activity is first started. Line
 
 \lstinputlisting[label=lst:dbhelper, caption=Creating the SQLite database, language=java]{lst/DbHelper.java}
 
-\subsection{Downloading the central database}
+An activity in Android is only running when it is active. This means that the handling of the database cannot be done by an activity, as the database calls are made from an AsyncTask and not an activity. To be able to access the database from any class in the program, an application must be created. The class PuddleApplication extends the Android class Application. An Application in Android is running the entire time the Android application is active. PuddleApplication seen in \autoref{lst:puddleapplication} handles the creation and references to the database class.
+
+\lstinputlisting[label=lst:puddleapplication, caption=Creation of Database in PuddleApplication, language=java]{lst/PuddleApplication.java}
+
+\subsection{Downloading From the Central Database}
 When pressing the synchronize button in Puddle, two things happen, the classes UploadTask and DownloadTask are called. DownloadTask connects to the central database, gets all data and inserts it into the local database. The DownloadTask is an extension of the Android class AsyncTask. AsyncTask creates a separate thread for DownloadTask because access to network and databases is not allowed on the UI thread in Android.
 \autoref{lst:downloadtask} shows the download from the central database. Line 1 and 2 sets up a new connection to the database. Line 4 inserts a timestamp to the table last\_sync in the database, this timestamp is also added to every row inserted from the central database, to be able to upload new rows when the databases are synchronized again. Line 6 selects all rows from the user table in the central database. The while loop on lines 8-14 selects a single row and passes it to the corresponding insert function in the Database class.
 
@@ -22,7 +29,7 @@ When pressing the synchronize button in Puddle, two things happen, the classes U
 
 \lstinputlisting[label=lst:insert, caption=Inserting in the database, language=java]{lst/insert.java}
 
-\subsection{Uploading updates to the central database}
+\subsection{Uploading Updates to the Central Database}
 As with the DownloadTask, the UploadTask in \autoref{lst:uploadtask} begins by connecting to the central database on line 1 and 2. Line 6 gets updated rows from the getUpdatedUser function shown in \autoref{lst:update.java}. The while loop on lines 7-19 prepares each updated row by creating an SQL query. Every SQL query is executed on line 21, when all updates have been found.
 
 \lstinputlisting[label=lst:uploadtask, caption=Uploading changes to the central database, language=java]{lst/UploadTask.java}
