sql impl done and introductions made to all chapters

--- a/report/tex/analysis/introduction.tex
+++ b/report/tex/analysis/introduction.tex
@@ -1,1 +1,1 @@
-In this chapter the material from the 2012 database version of GIRAF is analyzed and evaluated for future use. An assessment is made of the data needed in order to capture everything that the institutions need for the GIRAF system to suit their needs. Lastly a requirements analysis is performed with a resulting list of requirements. 
+\emph{In this chapter the material from the 2012 database version of GIRAF is analyzed and evaluated for future use. An assessment is made of the data needed in order to capture everything that the institutions need for the GIRAF system to suit their needs. Lastly a requirements analysis is performed with a resulting list of requirements.}
