--- a/report/tex/design/introduction.tex
+++ b/report/tex/design/introduction.tex
@@ -1,1 +1,1 @@
-\emph{Chapter introduction goes here}
+\emph{In this chapter the design of the database, an \ac{api} for communicating with the server and modules for connecting to the database and serving clients is described.}
