--- a/report/tex/implementation/chapter.tex
+++ b/report/tex/implementation/chapter.tex
@@ -3,6 +3,7 @@
 \input{tex/implementation/introduction}
 
 %\input{tex/implementation/filename}
+\input{tex/implementation/sql}
 \input{tex/implementation/database_module}
 \input{tex/implementation/connection_module}
 \input{tex/implementation/builder_functions}
