--- a/report/tex/implementation/introduction.tex
+++ b/report/tex/implementation/introduction.tex
@@ -1,1 +1,1 @@
-\emph{(Chapter introduction goes here)} 
+\emph{In this chapter the implementation of the design of the modules, the \ac{api} and the synchronization is described.} 
