--- a/report/tex/design/er_diagram.tex
+++ b/report/tex/design/er_diagram.tex
@@ -15,7 +15,13 @@ The ER diagram uses a collection of basic objects called entities and their rela
 \subsection{Profile}
 The profile entity includes both children and guardians, it holds information such as name, phone number, picture, e-mail, address and role (i.e. parent or department employee). The roles are important in determining the privileges of the account. Parents can only administrate their own children, employees on the other hand can administrate several of the children in a given department. 
 
-The \emph{guardian\_of} relationship enables one profile to be guardian several other profiles. This is because the children do not have the authority to administrate their own pictograms and settings, they rely on a guardian to handle all of the customization in cooperation with them. 
+The settings are saved in a blob because the data type is faster to use and because the data will not have to be manipulated through the database.
+
+The phone number is saved as a varchar to allow users to save country codes (such as +45 for Denmark). 
+
+It is assumed that no address is longer than 256 characters.
+
+The \emph{guardian\_of} relationship enables one profile to be guardian of several other profiles. This is because the children do not have the authority to administrate their own pictograms and settings, they rely on a guardian to handle all of the customization in cooperation with them. 
 
 The settings of an application are saved in the relation to the profile in order to allow different users to customize the look of the application.
 
