--- a/report/tex/sprint_reflections/introduction.tex
+++ b/report/tex/sprint_reflections/introduction.tex
@@ -1,1 +1,1 @@
-This chapter describes the development method used during the semesters and the progress of the Wasteland project. The product backlog is presented along with an overview of which which tasks were completed during a sprint, and which were delayed to later sprints. Furthermore we reflect on the sprints and the work performed during them.
+\emph{This chapter describes the development method used during the semesters and the progress of the Wasteland project. The product backlog is presented along with an overview of which which tasks were completed during a sprint, and which were delayed to later sprints. Furthermore we reflect on the sprints and the work performed during them.}
