proofreading of chapter 1 and 2

--- a/report/tex/commonReport/android.tex
+++ b/report/tex/commonReport/android.tex
@@ -2,7 +2,7 @@
 \label{sec:platform}
 Android is an open-source operating system originally developed by Android Inc, and later bought by Google Inc. The first release came in 2007, where it was launched by Google Inc. together with \ac{oha}, which includes companies such as Samsung, HTC, LG and Google.
 
-Before the first students where involved in the project in the spring of 2011 Ulrik Nyman considered two platforms for the development of the project. The Android and iOS platforms. The Android platform was chosen for three main reasons:
+Before the first students were involved in the project in the spring of 2011 Ulrik Nyman considered two platforms for the development of the project. The Android and iOS platforms. The Android platform was chosen for three main reasons:
 \begin{itemize}
 \item That the platform is open source.
 \item That in Android the developers can take control of the functionality of the home button.
@@ -10,7 +10,7 @@ Before the first students where involved in the project in the spring of 2011 Ul
 \end{itemize}
 
 For the the two following years it has been chosen to stay on the Android platform. This is done both to be able to reuse the source code and because Android compatible hardware is available for the students.
-In the very long tern the system could support multiple platforms.
+In the very long term the system could support multiple platforms.
 
 %Android was chosen as the target platform because it is open-source.
 %The following years it was chosen to continue the work from previous rather than to start from scratch by choosing a different platform, and the development platform is therefore still Android.
