--- a/report/tex/commonReport/autism.tex
+++ b/report/tex/commonReport/autism.tex
@@ -18,7 +18,7 @@ Autism is a physical condition and is linked to abnormal chemistry in the brain,
 \label{sub:symptoms}
 Children with autism usually have difficulties understanding the concept of ``play pretend'', meaning that they have a hard time imitating the actions of others when playing and therefore prefer to play alone. Furthermore they have difficulties with social interaction and communication -- verbally and non-verbally.
 
-People diagnosed with autism may;
+People diagnosed with autism may:
 
 %% Every person with autism is different, just like normal people, however in general people with autism may:
 
@@ -33,7 +33,7 @@ Furthermore the lack of social interaction means they might have a hard time mak
 
 \subsection*{Signs and tests}
 \label{sub:signsAndTests}
-If a child fails to meet any of the following language milestones, it may be an indication that it needs to be tested for autism;
+If a child fails to meet any of the following language milestones, it may be an indication that it needs to be tested for autism:
 
 \begin{itemize}
 \item Babbling by 12 months.
@@ -41,7 +41,7 @@ If a child fails to meet any of the following language milestones, it may be an 
 \item Saying single words by 16 months.
 \end{itemize}
 
-Children failing to meet any of the previous mentioned language milestones might receive a hearing evaluation, a blood test and a screening test for autism. Since autism covers a broad spectrum of symptoms, a single brief evaluation cannot predict what abilities the child has. Therefore a range of different skills are evaluated, such as:
+Children failing to meet any of the previously mentioned language milestones might receive a hearing evaluation, a blood test and a screening test for autism. Since autism covers a broad spectrum of symptoms, a single brief evaluation cannot predict what abilities the child has. Therefore a range of different skills are evaluated, such as:
 
 \begin{itemize}
 \item Communication
