--- a/report/tex/commonReport/decisionMaking.tex
+++ b/report/tex/commonReport/decisionMaking.tex
@@ -41,7 +41,7 @@ The following section describes an extract of some of the most important committ
         \item Wiki: \emph{Ensures that the multi-project wiki page on Redmine is created in a uniform way by establishing guidelines for new
         articles.}
         \item Design Guidelines: \emph{Ensures that the User Interface design of the \ac{giraf} application is uniform (e.g. in regards to font, color scheme and various buttons - green for `yes' and red for `no').}
-        \item Common Report: \emph{This committee is responsible for the creation of the common-report chapters, which you are reading now, that are at the beginning of every semester report.}
+        \item Common Report: \emph{This committee is responsible for the creation of the common-report chapters, which you are reading now, that are at the beginning of every project report.}
         \item Pictogram Class: \emph{Because every group requires a common pictogram class, it was decided to create a Pictogram Class committee to determine the functionality that this class needed.}
         \item GIT: \emph{The GIT committee is responsible for working out a common structure across all repositories to create uniformity and make it easier to continuously integrate.}
         \item Public Pictogram: \emph{Determines guidelines for how pictograms are handled in the database (e.g. who has access rights to what and why?).}
