--- a/report/tex/commonReport/introChap2.tex
+++ b/report/tex/commonReport/introChap2.tex
@@ -1,4 +1,4 @@
-When working in a multi-project consisting of eight groups, it is important to have a common goal for the project. This chapter describes this goal as a story. Furthermore the chapter includes description of the development process and the rules of conduct.  %as well as the rules of conduct, that was used in the \ac{giraf} project of year 2013.
+When working in a multi-project consisting of eight groups, it is important to have a common goal for the project. This chapter describes this goal as a story. Furthermore the chapter includes a description of the development process and the rules of conduct.  %as well as the rules of conduct, that was used in the \ac{giraf} project of year 2013.
 
 \section{The Goals for 2013}
 Within the first couple of weeks, when all the groups had been assigned a project, a major story for the overall project was written.
@@ -14,5 +14,5 @@ Afterwards the child wants to go outside to see the rest of the institution, and
 
 When the child comes back in, the guardian and the child play the games prepared earlier by the guardian.
 
-When they are done playing the child and the guardian read the child's life story using Tortoise.''
+When they are done playing, the child and the guardian read the child's life story using Tortoise.''
 \end{quote}
