--- a/report/tex/commonReport/previousYears.tex
+++ b/report/tex/commonReport/previousYears.tex
@@ -25,7 +25,7 @@ During the spring semester of 2012 two databases were developed, however synchro
 \subsection*{Problems with Initial Implementation}
 As the spring semester of 2013 started, an ''install party'' for the students was held. The party was intended to help the students compile and deploy the projects from 2012.
 
-Even though a representatives for each of the 2012 groups were present, some compilation problems still occurred.
+Even though representatives from each of the 2012 groups were present, some compilation problems still occurred.
 
 The repository used for distributing in 2012, was disorganized and difficult to navigate, i.e. due to:
 \begin{itemize}
